--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <title>Page title</title>
 </head>
 <body>
-    <p>Hello-hello-hello. Hello?</p>
-    <img src="{{ url_for('static', filename='img/helpbox-contact.jpg') }}"
-    alt="Img" width="100%" height="100%">
+
 </body>
 </html>
