--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Page title</title>
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
+    <header class="header">
+        <h1>Панель<br>управления</h1>
+    </header>
 
 </body>
 </html>
