--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
     <header class="header">
         <h1>Панель<br>управления</h1>
     </header>
+    <p>
+        Меню
+    </p>
 
 </body>
 </html>
