--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -12,10 +12,8 @@
       <h2 align="center">Логи веб-приложения</h2>
       <div class="log_window">
         <p align="center">
-		{% for log in web_app_logs %}
-			{{ log }}
-		{% endfor %}
-	</p>
+		{{ web_app_logs }}
+        </p>
     </div>
     </div>
   </body>
