--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -12,7 +12,9 @@
       <h2 align="center">Логи веб-приложения</h2>
       <div class="log_window">
         <p align="center">
-		{{web_app_logs}}
+		{%  for log in web_app_logs %}
+            {{  log }}
+            {% endfor %}
         </p>
     </div>
     </div>
