--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -3,3 +3,9 @@
     width: 500px;
     height: 500px;
 }
+
+.logs_block {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
