--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="logs_block">
-      <h2>Логи веб-приложения</h2>
+      <h2 align="center">Логи веб-приложения</h2>
       <div class="log_window">
         <p>
 		{%  for log in web_app_logs %}
