--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/static/css/main_page.css">
   </head>
   <body>
-    <div class="logs_block">
-      <h2 align="center">Логи веб-приложения</h2>
+    <div class="logs_block" align="center">
+      <h2>Логи веб-приложения</h2>
       <div class="log_window">
         <p>
 		{%  for log in web_app_logs %}
