--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -13,7 +13,7 @@
       <div class="log_window">
         <ul>
 		{%  for log in web_app_logs %}
-            <li><{{ log }}/li>
+            <li>{{ log }}</li>
             {% endfor %}
         </ul>
     </div>
