--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -11,7 +11,7 @@
     <div class="logs_block" align="center">
       <h2>Логи веб-приложения</h2>
       <div class="log_window">
-        <ul>
+        <ul class="log_list">
 		{%  for log in web_app_logs %}
             <li>{{ log }}</li>
             {% endfor %}
