--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -16,6 +16,7 @@
             <li>log[0]</li>
             {% for l in log[1] %}
                 {{ l }}
+                {% endfor %}
             {% endfor %}
         </ul>
     </div>
