--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -2,6 +2,9 @@
     overflow: scroll;
     width: 800px;
     height: 800px;
+    border-radius: 15px;
+    border-color: black;
+    border-width: 2px;
 }
 
 .log_list {
@@ -10,4 +13,44 @@
 
 li {
     font-weight: bold;
+}
+
+.buttons {
+    display: flex;
+}
+
+.buttons a {
+    background-color: rgb(73, 73, 73);
+    height: 50px;
+    width: 250px;
+    margin-right: 50px;
+    margin-left: -400px;
+    border-radius: 15px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    
+}
+
+.buttons a:hover{
+    transition: 0.2s;
+    background-color: rgba(73, 73, 73, 0.7);
+}
+
+.container {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+body {
+    background-color: rgb(200, 226, 250);
+}
+
+.log_window {
+    background-color: #fff;
 }
