--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -10,7 +10,7 @@
   <body>    
   <div class="container">
       <div class="buttons">
-        <a href="/static/logs/connect.json" download="connect">
+        <a href="/static/logs/connect_logs.txt" download="connect">
           Логи 1С-Коннект
         </a>
       </div>
