--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -17,7 +17,7 @@
           Логи 1С-Коннект
         </a>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          Запустите демо модального окна
+          Обновить статистику звонков
         </button>
       </div>
       <div class="logs_block" align="center">
