--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -44,7 +44,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    max-width: 1400px;
 }
 
 body {
