--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>    
-  <div class="container">
+  <div class="containe">
       <div class="buttons">
         <a href="/static/logs/connect_logs.txt" download="connect">
           Логи 1С-Коннект
