--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -40,8 +40,11 @@ li {
 }
 
 .container {
+    position: absolute;
     display: flex;
+    justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 body {
