--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -17,7 +17,8 @@ li {
 
 .buttons {
     display: flex;
-
+    flex-direction: column;
+    padding-top: 500px;
 }
 
 .buttons a {
@@ -25,7 +26,8 @@ li {
     height: 50px;
     width: 250px;
     border-radius: 15px;
-    color: #fff;    
+    color: #fff;   
+    margin-top: 50px; 
 }
 
 .buttons a:hover{
@@ -34,6 +36,7 @@ li {
 }
 
 .container {
+    display: flex;
 }
 
 body {
