--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -14,9 +14,9 @@
         <a href="/static/logs/connect_logs.txt" download="connect">
           Логи 1С-Коннект
         </a>
-        <a href="#" download="connect">
-          Логи 1С-Коннект
-        </a>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Обновить статистику звонков
+        </button>
       </div>
       <div class="logs_block" align="center">
       <h2>Логи веб-приложения</h2>
