--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -38,11 +38,13 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Заголовок модального окна</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Обновление статистики звонков</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
-        ...
+        Новая статистика
+        <input name="upload-file" type="file" accept=".xlsx">
+        <button>Обновить</button>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
