--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -37,12 +37,16 @@ li {
 
 .btn-primary {
     margin-top: 50px!important;
+    height: 50px!important;
+    width: 250px!important;
+    border-radius: 15px!important;
 }
 
 .buttons a:hover{
     transition: 0.2s;
     background-color: rgba(73, 73, 73, 0.7);
     text-decoration: none;
+    color: #fff
 }
 
 .container {
