--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -47,7 +47,7 @@
         <input name="upload-file" type="file" accept=".xlsx">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Обновить данные</button>
+        <button type="button" class="btn btn-success">Обновить данные</button>
       </div>
     </div>
   </div>
