--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -49,7 +49,7 @@ li {
     color: #fff
 }
 
-.modal-body #file-upload-button {
+.modal-body input::file-selector-button {
     background-color:rgb(73, 73, 73);
     color:#fff
 }
