--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -42,9 +42,13 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
+        <div class="input-block">
         Новая статистика:
-        <br> 
         <input name="upload-file" type="file" accept=".xlsx">
+      </div>
+      <div class="text-block">
+        Файлы будут перезаписаны
+      </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-success">Обновить данные</button>
