--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -57,6 +57,7 @@ li {
     background-color:rgb(73, 73, 73);
     color:#fff;
     border-radius: 10px;
+    margin-right: 10px;
 }
 
 .modal-body input::file-selector-button:hover {
