--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -44,14 +44,14 @@
       <div class="modal-body">
         <div class="input-block">
         Новая статистика:
-        <input name="upload-file" type="file" accept=".xlsx">
+        <input name="new_call_statistic_file" type="file" accept=".xlsx">
       </div>
       <div class="text-block">
         Файлы будут перезаписаны
       </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-success">Обновить данные</button>
+        <input type="submit" value="Обновить">
       </div>
     </div>
   </div>
