--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -41,6 +41,7 @@
         <h5 class="modal-title" id="exampleModalLabel">Обновление статистики звонков</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
+      <form method="post"> 
       <div class="modal-body">
         <div class="input-block">
         Новая статистика:
@@ -51,8 +52,10 @@
       </div>
       </div>
       <div class="modal-footer">
-        <input type="submit" value="Обновить">
+        <button type="button" class="btn btn-success">Обновить данные</button>
+        <input type="submit" value="ok">
       </div>
+      </form>
     </div>
   </div>
 </div>
