--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -54,6 +54,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-success">Обновить данные</button>
         <input type="submit" value="ok">
+        <div class="modal_submit_button"><input type="submit" value="Изменить"></div>
       </div>
       </form>
     </div>
