--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -66,6 +66,7 @@ li {
     color:#fff;
     border-radius: 10px;
     margin-right: 10px;
+    transition: 0.2s;
 }
 
 .modal-body input::file-selector-button:hover {
@@ -73,6 +74,18 @@ li {
     background-color: rgba(73, 73, 73, 0.7);
     text-decoration: none;
     color: #fff
+}
+
+.modal-footer input {
+    background-color:rgb(40, 150, 50);
+    color:#000;
+    border-radius: 10px;
+    transition: 0.2s;
+}
+
+.modal-footer input:hover {
+    background-color:rgba(40, 150, 49, 0.80);
+    transition: 0.2s;
 }
 
 .container {
