--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -78,7 +78,7 @@ li {
 
 .modal-footer input {
     background-color:#146c43;
-    color:#000;
+    color:#fff;
     border-radius: 10px;
     transition: 0.2s;
     border-width: 0px;
