--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -82,11 +82,14 @@ li {
     border-radius: 10px;
     transition: 0.2s;
     border-width: 0px;
+    height: 35px;
+    width: 175px;
 }
 
 .modal-footer input:hover {
-    background-color:rgba(28, 105, 35);
+    background-color:#21ad6c;;
     transition: 0.2s;
+    width: 200px;
 }
 
 .container {
