--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -45,7 +45,7 @@
       <div class="modal-body">
         <div class="input-block">
         Новая статистика:
-        <input name="new_call_statistic_file" type="file" accept=".xlsx">
+        <input name="new_call_statistic_file" type="file" accept=".xlsx" enctype="multipart/form-data">
       </div>
       <div class="text-block">
         Файлы будут перезаписаны
