--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -41,11 +41,11 @@
         <h5 class="modal-title" id="exampleModalLabel">Обновление статистики звонков</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
-      <form method="post"> 
+      <form method="post" enctype="multipart/form-data"> 
       <div class="modal-body">
         <div class="input-block">
         Новая статистика:
-        <input name="new_call_statistic_file" type="file" accept=".xlsx" enctype="multipart/form-data" method="post">
+        <input name="new_call_statistic_file" type="file" accept=".xlsx">
       </div>
       <div class="text-block">
         Файлы будут перезаписаны
