--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -46,6 +46,12 @@
         <div class="input-block">
         Новая статистика:
         <input name="new_call_statistic_file" type="file" accept=".xlsx">
+        <select class="form-select" aria-label="Пример выбора по умолчанию">
+          <option selected>Выберите месяц</option>
+          <option value="1">Один</option>
+          <option value="2">Два</option>
+          <option value="3">Три</option>
+        </select>
       </div>
       <div class="text-block">
         Файлы будут перезаписаны
