--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -69,6 +69,7 @@ li {
     margin-right: 10px;
     transition: 0.3s ease;
     border-width: 0px;
+    height: 35px;
 }
 
 .modal-body input::file-selector-button:hover {
