--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -56,6 +56,8 @@ li {
 
 .modal-body .text-block {
     text-align: right;
+    background-color: rgb(73, 73, 73);
+    color: #fff
 }
 
 .modal-body input {
