--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -54,7 +54,7 @@
         </select>
       </div>
       <div class="text-block">
-        Файлы будут перезаписаны
+        Статистика звонков за выбранный месяц будет полностью перезаписана
       </div>
       </div>
       <div class="modal-footer">
