--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -57,6 +57,8 @@ li {
 .modal-body .text-block {
     text-align: right;
     color: rgb(160, 0, 0);
+    border-left: rgb(73, 73, 73);
+    border-width: 2px;
 }
 
 .modal-body input {
@@ -72,8 +74,6 @@ li {
     border-width: 0px;
     height: 35px;
     width: 150px;
-    border-left: rgb(73, 73, 73);;
-    border-width: 2px;
 }
 
 .modal-body input::file-selector-button:hover {
