--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -57,8 +57,10 @@ li {
 .modal-body .text-block {
     text-align: right;
     color: rgb(160, 0, 0);
-    border-left: rgb(73, 73, 73);
-    border-width: 2px;
+}
+
+.separate-line { 
+    border-left: 6px solid green;
 }
 
 .modal-body input {
