--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -53,6 +53,7 @@
           <option value="3">Три</option>
         </select>
       </div>
+      <div class="separate-line"></div>
       <div class="text-block">
         Статистика звонков за выбранный месяц будет полностью перезаписана
       </div>
