--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -60,7 +60,7 @@ li {
 }
 
 .separate-line { 
-    border-left: 6px solid green;
+    border-left: 2px solid rgb(73, 73, 73);;
 }
 
 .modal-body input {
