--- a/web_app_4dk/static/css/main_page.css
+++ b/web_app_4dk/static/css/main_page.css
@@ -55,8 +55,9 @@ li {
 }
 
 .modal-body .text-block {
-    text-align: right;
+    text-align: center;
     color: rgb(160, 0, 0);
+    margin-top: 15px;
 }
 
 .separate-line { 
@@ -67,6 +68,7 @@ li {
 
 .input-block {
     display: flex;
+    flex-direction: column;
 }
 
 .modal-body input {
