--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -48,9 +48,23 @@
         <input name="new_call_statistic_file" type="file" accept=".xlsx">
         <select class="form-select" aria-label="Пример выбора по умолчанию">
           <option selected>Выберите месяц</option>
-          <option value="1">Один</option>
-          <option value="2">Два</option>
-          <option value="3">Три</option>
+          <option value="Январь">Январь</option>
+          <option value="Февраль">Февраль</option>
+          <option value="Март">Март</option>
+          <option value="Апрель">Апрель</option>
+          <option value="Май">Май</option>
+          <option value="Июнь">Июнь</option>
+          <option value="Июль">Июль</option>
+          <option value="Август">Август</option>
+          <option value="Сентябрь">Сентябрь</option>
+          <option value="Октябрь">Октябрь</option>
+          <option value="Ноябрь">Ноябрь</option>
+          <option value="Декабрь">Декабрь</option>
+        </select>
+        <select class="form-select" aria-label="Пример выбора по умолчанию">
+          <option selected>Выберите год</option>
+          <option value="2022">2022</option>
+          <option value="2023">2023</option>
         </select>
         <div class="text-block">
           Статистика звонков за выбранный месяц будет полностью перезаписана
