--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -67,7 +67,7 @@
           <option value="2023">2023</option>
         </select>
         <div class="text-block">
-          Статистика звонков за выбранный месяц будет полностью перезаписана
+          Статистика звонков за выбранный период будет полностью перезаписана
         </div>
       </div>
       </div>
