--- a/web_app_4dk/templates/login.html
+++ b/web_app_4dk/templates/login.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-<h1>HELLO</h1>
+<div>
+    <form method="POST">
+        Login
+        <input type="text" name="login">
+        Password
+        <input type="text" name="password">
+    </form>
+</div>
 </body>
 </html>
