--- a/web_app_4dk/templates/login.html
+++ b/web_app_4dk/templates/login.html
@@ -11,6 +11,7 @@
         <input type="text" name="login">
         Password
         <input type="text" name="password">
+        <input type="submit">
     </form>
 </div>
 </body>
