--- a/web_app_4dk/templates/login.html
+++ b/web_app_4dk/templates/login.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/css/login.css">
 </head>
 <body>
 <div>
+    <div class="main-block">
     <form method="POST">
         Login
         <input type="text" name="login">
@@ -13,6 +16,7 @@
         <input type="text" name="password">
         <input type="submit">
     </form>
+    </div>
 </div>
 </body>
 </html>
