--- a/web_app_4dk/static/css/login.css
+++ b/web_app_4dk/static/css/login.css
@@ -1,4 +1,10 @@
-.main-block {
+.main-block form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form {
     display: flex;
     flex-direction: column;
 }
