--- a/web_app_4dk/templates/login.html
+++ b/web_app_4dk/templates/login.html
@@ -9,7 +9,7 @@
 <body>
 <div>
     <div class="main-block">
-    <form method="POST">
+    <form method="POST" class="form">
         Login
         <input type="text" name="login">
         Password
