--- a/web_app_4dk/templates/login.html
+++ b/web_app_4dk/templates/login.html
@@ -13,7 +13,7 @@
         Login
         <input type="text" name="login">
         Password
-        <input type="text" name="password">
+        <input type="password" name="password">
         <input type="submit">
     </form>
     </div>
