--- a/web_app_4dk/templates/login.html
+++ b/web_app_4dk/templates/login.html
@@ -10,9 +10,9 @@
 <div>
     <div class="main-block">
     <form method="POST" class="form">
-        Login
+        <p>Login</p>
         <input type="text" name="login">
-        Password
+        <p>Password</p>
         <input type="password" name="password">
         <input type="submit">
     </form>
