--- a/web_app_4dk/templates/login.html
+++ b/web_app_4dk/templates/login.html
@@ -14,7 +14,7 @@
         <input type="text" name="login">
         <p>Password</p>
         <input type="password" name="password">
-        <input type="submit">
+        <input type="submit" class="button" value="Авторизация">
     </form>
     </div>
 </div>
