--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -37,11 +37,11 @@
   </div>
     </div>
     <!-- Модальное окно "Обновить статистику звонков"-->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="ReviseAccountingDealsModal" tabindex="-1" aria-labelledby="ReviseAccountingDealsModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Обновление статистики звонков</h5>
+        <h5 class="modal-title" id="ReviseAccountingDealsModalLabel">Обновление статистики звонков</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <form method="POST" enctype="multipart/form-data"> 
@@ -71,11 +71,11 @@
   </div>
 </div>
 <!-- Модальное окно "Сверка по отчетности"-->
-<div class="modal fade" id="ReviseAccountingDeals" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="ReviseAccountingDealsLabel">Обновление статистики звонков</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Обновление статистики звонков</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <form method="POST" enctype="multipart/form-data">
