--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -18,7 +18,7 @@
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
           Обновить статистику звонков
         </button>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ReviseAccountingDeals">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ReviseAccountingDealsModal">
           Сверка по отчетности
         </button>
       </div>
