--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -36,12 +36,12 @@
     </div>
   </div>
     </div>
-    <!-- Модальное окно "Обновить статистику звонков"-->
+    <!-- Модальное окно "Сверка по отчетности"-->
 <div class="modal fade" id="ReviseAccountingDealsModal" tabindex="-1" aria-labelledby="ReviseAccountingDealsModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="ReviseAccountingDealsModalLabel">Обновление статистики звонков</h5>
+        <h5 class="modal-title" id="ReviseAccountingDealsModalLabel">Сверка по отчетности</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <form method="POST" enctype="multipart/form-data"> 
@@ -64,13 +64,13 @@
                         </dib>
                     {% endif %}
                     {% endwith %}
-        <input type="submit" value="Обновить данные">
+        <input type="submit" value="Сверка">
       </div>
       </form>
     </div>
   </div>
 </div>
-<!-- Модальное окно "Сверка по отчетности"-->
+<!-- Модальное окно "Обновить статистику звонков"-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
