--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -48,7 +48,7 @@
       <div class="modal-body">
         <div class="input-block">
         Файл формата .rar или .xlsx
-        <input name="new_call_statistic_file" type="file" accept=".xlsx">
+        <input name="revise_accounting_deals_file" type="file" accept=".xlsx">
         <div class="text-block">
           Текст
         </div>
