--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -64,7 +64,7 @@
                         </dib>
                     {% endif %}
                     {% endwith %}
-        <input type="submit" value="Сверка">
+        <input type="submit" value="Сверка" name="submit_button">
       </div>
       </form>
     </div>
@@ -118,7 +118,7 @@
                         </dib>
                     {% endif %}
                     {% endwith %}
-        <input type="submit" value="Обновить данные">
+        <input type="submit" value="Обновить данные" name="submit_button">
       </div>
       </form>
     </div>
