--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -47,8 +47,8 @@
       </div>
       <div class="modal-body">
         <div class="input-block">
-        Файл формата .zip или .xlsx
-        <input name="revise_accounting_deals_file" type="file" accept='.xlsx, .zip'>
+        Файл формата .xlsx
+        <input name="revise_accounting_deals_file" type="file" accept='.xlsx'>
         <div class="text-block">
           Текст
         </div>
