--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -63,8 +63,21 @@
                         </dib>
                     {% endif %}
                     {% endwith %}
-        <input type="submit" value="Сверка" name="submit_button">
+        <input type="submit" value="Сверка" name="submit_button" id="liveToastBtn">
       </div>
+    </div>
+  </div>
+</div>
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+  <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <img src="..." class="rounded me-2" alt="...">
+      <strong class="me-auto">Bootstrap</strong>
+      <small>11 мин назад</small>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
+    </div>
+    <div class="toast-body">
+      Привет, мир! Это тост-сообщение.
     </div>
   </div>
 </div>
