--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -21,7 +21,7 @@
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ReviseAccountingDealsModal">
           Сверка по отчетности
         </button>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ReviseNewSub">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ReviseNewSubModal">
           Сверка по NewSub
         </button>
       </div>
@@ -85,11 +85,11 @@
   </div>
 </div>
 <!-- Модальное окно "Сверка по NewSub"-->
-<div class="modal fade" id="ReviseNewSub" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="ReviseNewSubModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="ReviseNewSubLabel">Обновление статистики звонков</h5>
+        <h5 class="modal-title" id="ReviseNewSubModalLabel">Обновление статистики звонков</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
