--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -94,7 +94,7 @@
       </div>
       <div class="modal-body">
         <div class="input-block">
-        NewSub файл
+        Сверка
         <input name="newsub_file" type="file" accept=".xlsx">
       </div>
       </div>
