--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -89,12 +89,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="ReviseNewSubModalLabel">Обновление статистики звонков</h5>
+        <h5 class="modal-title" id="ReviseNewSubModalLabel">Сверка по NewSub</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
         <div class="input-block">
-        Сверка
+        NewSub файл
         <input name="newsub_file" type="file" accept=".xlsx">
       </div>
       </div>
@@ -108,7 +108,7 @@
                         </dib>
                     {% endif %}
                     {% endwith %}
-        <input type="submit" value="Сформировать файл сверки" name="submit_button">
+        <input type="submit" value="Сверка" name="submit_button">
       </div>
       </div>
     </div>
