--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -36,7 +36,7 @@
     </div>
   </div>
     </div>
-    <div class="'buttons">
+    <div class="buttons">
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#MegafonCallsHandler">
       Обработка статистики Мегафона
     </button>
