--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -37,7 +37,7 @@
   </div>
   <div class="buttons">
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#MegafonCallsHandler">
-      Обработка статистики Мегафона
+      Обработка файла Мегафона
     </button>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Обновить статистику звонков
