--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div class="buttons">
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#MegafonCallsHandler">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#MegafonCallsHandlerModal">
       Обработка файла Мегафона
     </button>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
