--- a/web_app_4dk/templates/main_page.html
+++ b/web_app_4dk/templates/main_page.html
@@ -37,7 +37,7 @@
   </div>
   <div class="buttons">
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#MegafonCallsHandlerModal">
-      Обработка файла Мегафона
+      Отчет по Мегафону
     </button>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Обновить статистику звонков
@@ -94,12 +94,12 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="MegafonCallsHandlerLabel">Обработка файла Мегафона</h5>
+          <h5 class="modal-title" id="MegafonCallsHandlerLabel">Отчет по Мегафону</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <div class="modal-body">
           <div class="input-block">
-          Файл Мегафона
+          История звонков Мегафона
           <input name="newsub_file" type="file" accept=".xlsx">
         </div>
         </div>
